# whatsapp-propensity-scoring

./: .dockerignore  .env.example  .gitignore  Dockerfile  FRONTEND_GUIDE.md  PROJECT_ARCHITECTURE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/: deps.py
app/api/internal/routes/: whatsapp.py
app/api/v1/routes/: admin.py  auth.py  polls.py  whatsapp.py
app/core/: auth.py  bridge_pool.py  config.py  logging_setup.py  migrations.py  whatsapp_bridge.py
app/models/: poll.py  user.py  whatsapp.py
app/repositories/: supabase_poll_repository.py
app/services/: csv_parser.py  email_service.py  keyword_analysis_service.py  keyword_analysis_state.py  poll_scoring_service.py  propensity_scoring_state.py  scoring.py  whatsapp_poll_ingestion_service.py  whatsapp_session_state.py
logs/server/: pairing-code.json
supabase/migrations/: 001_create_poll_prediction.sql  002_create_get_poll_user_history_rpc.sql  003_create_whatsapp_poll_vote_event.sql  004_add_poll_prediction_source_mobile_unique.sql  005_create_whatsapp_poll.sql  006_alter_whatsapp_poll_vote_event_add_normalized_vote.sql  007_create_whatsapp_poll_vote_snapshot.sql  008_create_whatsapp_keywords.sql  009_create_whatsapp_keyword_match.sql  010_add_receiver_phone_to_keyword_match.sql  011_add_performance_indexes.sql  012_create_users.sql  013_make_whatsapp_phone_optional.sql  014_add_receiver_phone_to_poll_tables.sql  015_add_group_name_to_whatsapp_poll.sql  016_add_admin_role.sql
whatsapp_bridge/: package-lock.json  package.json  poll-bridge.ts  poll_store.json
