[project]
name = "whatsapp-propensity-scoring"
version = "0.1.0"
description = "FastAPI service for scoring WhatsApp poll purchase propensity."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<0.116.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.4.0",
    "supabase>=2.7.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "psycopg2-binary>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["ppvenv*"]
